# humor

./: Cargo.toml  README.md
.humors/: dev.yaml  humor.yaml  test.yaml
src/: command.rs  config.rs  error.rs  lib.rs  main.rs
tests/: cli_tests.rs
