[package]
name = "humor"
version = "0.0.0"
edition = "2021"
authors = ["Muhan Xiao <syrupcake@protonmail.com>"]
description = "Still under development, no content. It will become an awesome project."
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
